[package]
name = "tojson_macros"
version = "0.2.2"
authors = ["Ning Sun <sunng@about.me>"]
description = "A simple syntax extension generates default ToJson impl"
license = "MIT/Apache-2.0"
keywords = ["serialize", "json", "handlebars"]
homepage = "https://github.com/sunng87/tojson_macros"
repository = "https://github.com/sunng87/tojson_macros"
readme = "README.md"

[lib]
name = "tojson_macros"
plugin = true

[dev-dependencies]
rustc-serialize = "*"
