[package]
name = "tojson_macros"
version = "0.3.5-pre"
authors = ["Ning Sun <sunng@about.me>"]
description = "A simple syntax extension generates default ToJson impl"
license = "MIT/Apache-2.0"
keywords = ["serialize", "json", "handlebars"]
homepage = "https://github.com/sunng87/tojson_macros"
repository = "https://github.com/sunng87/tojson_macros"
readme = "README.md"

[lib]
name = "tojson_macros"
proc-macro = true
test = false

[dependencies]
syn = "^0.11"
quote = "^0.3"

[dev-dependencies]
rustc-serialize = "^0.3.18"

[package.metadata.release]
sign-commit = true
